--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "asi-bug-example",
   "version": "1.0.0",
-  "description": "Example repo for a Hello World Node.js application",
+  "description": "Example code that shows off potential issues with JavaScript's Automatic Semicolon Insertion",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -18,12 +18,13 @@
   },
   "homepage": "https://github.com/AdaGold/ASI-bug-example#readme",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.0",
+    "@eslint/js": "^9.22.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
     "eslint": "^9.22.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^7.2.1",
-    "@eslint/eslintrc": "^3.3.0",
-    "@eslint/js": "^9.22.0",
     "globals": "^16.0.0"
   }
 }
